--- a/index.html
+++ b/index.html
@@ -197,6 +197,10 @@
     </form>
   </div>
 </section>
+<nav>
+  <a href="index.html">HOME</a>
+  <a href="login.html">DASHBOARD</a>
+</nav>
 <!-- 🔚 Footer -->
 <footer class="bg-blue-900 text-white text-center py-8 px-6">
   <div class="max-w-6xl mx-auto">
@@ -210,7 +214,3 @@
     <p class="text-xs mt-4">Trading involves risk. Please read our <a href="#" class="underline text-teal-300">disclaimer</a>.</p>
   </div>
 </footer>
-<nav>
-  <a href="index.html">Home</a>
-  <a href="login.html">Dashboard</a>
-</nav>
