Fix HTML encoding issues in login.html

--- a/login.html
+++ b/login.html
@@ -139,7 +139,7 @@
   <div class="max-w-4xl mx-auto text-center">
     <h2 class="text-xl font-semibold text-blue-800 mb-4">💬 Need Help?</h2>
     <p class="text-gray-700 mb-6">Chat with our support team instantly on WhatsApp.</p>
-    <a href="https://wa.me/18022073287?text=Hi%20SummitTrade%2C%20I%20need%20help%20with%20my%20account"
+    <a href="https://wa.me/18022073287?text=Hi%20PrimeWealthInvestment%2C%20I%20need%20help%20with%20my%20account"
        target="_blank"
        class="inline-block bg-green-500 hover:bg-green-600 text-white font-semibold px-6 py-3 rounded-md shadow transition">
       📱 Chat on WhatsApp
@@ -157,4 +157,5 @@
         <a href="login.html" class="hover:text-teal-300">Login</a>
       </div>
     </div>
+
   </footer>
