Add Open Graph tags to login.html
Added Open Graph meta tags for better link previews.

--- a/login.html
+++ b/login.html
@@ -5,6 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About Us | Prime Wealth Investment</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <head>
+  <title>My Website</title>
+
+  <!-- Open Graph tags for link preview -->
+  <meta property="og:title" content="My Website">
+  <meta property="og:description" content="This is my awesome website!">
+  <meta property="og:image" content="https://img.freepik.com/premium-photo/arrow-logo-illustration-design-vector-images_959624-72022.jpg">
+  <meta property="og:url" content="https://yourdomain.com">
+  <meta property="og:type" content="website">
+  <head>
 </head>
 <body class="bg-gray-50 text-gray-800 font-sans">
 
@@ -166,5 +176,6 @@
     </div>
 
   </footer>
+
 
 
